fix(children list): improve attendance blocks layout and prevent overlap in table
closes #438

--- a/src/app/child-dev-project/attendance/attendance-block/attendance-block.component.scss
+++ b/src/app/child-dev-project/attendance/attendance-block/attendance-block.component.scss
@@ -1,7 +1,11 @@
 .attendance-block {
-  padding: 5px;
+  display: inline-block;
+  text-align: center;
   border-radius: 4px;
   margin: 3px;
+  width: 42px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 
